--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^19.0.0",
     "expo": "~49.0.10",
     "expo-av": "~13.4.1",
+    "expo-build-properties": "^1.0.9",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "^8.0.9",
     "expo-modules-core": "~1.5.12",
@@ -21,7 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.10",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-router": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "~18.2.14",
