--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
+  "framework": null,
+  "buildCommand": "npx expo export -p web",
+  "outputDirectory": "dist",
+  "devCommand": "npx expo start --web",
+  "cleanUrls": true,
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/:path*",
+      "destination": "/"
+    }
   ]
 }
